# markdown_records

./: Cargo.toml  README.md  deno.json  mod.ts  test.ts
.github/workflows/: ci.yml
lib/: markdown_records.generated.js  markdown_records_bg.wasm
src/: lib.rs
src/fixtures/: example.md
