[package]
name = "markdown_records"
version = "0.2.0"
edition = "2021"
description = "Wasm bindings to generate algolia search records from markdown"
authors = ["Kitson P. Kelly"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "markdown_records"

[dependencies]
comrak = "0.14.0"
js-sys = "=0.3.58"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "s"